@@ -4,8 +4,8 @@ import com.example.aggregator.client.AggregatorRestClient;
 import com.example.aggregator.model.Entry;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class AggregatorService {
@@ -17,22 +17,30 @@ public class AggregatorService {
     }
 
     public Entry getDefinitionFor(String word) {
-
         return aggregatorRestClient.getDefinitionFor(word);
     }
 
     public List<Entry> getWordsThatContainSuccessiveLettersAndStartsWith(String chars) {
-        List<Entry> wordsThatStartWith = aggregatorRestClient.getWordsStartingWith(chars);
-        List<Entry> wordsThatContainConsecutiveLetters = aggregatorRestClient.getWordsThatContainConsecutiveLetters();
 
+        List<Entry> wordsThatStartWith = aggregatorRestClient.getWordsStartingWith(chars);
+        List<Entry> wordsThatContainSuccessiveLetters = aggregatorRestClient.getWordsThatContainConsecutiveLetters();
+
+        // stream API version
         List<Entry> common = wordsThatStartWith.stream()
-                .filter(wordsThatContainConsecutiveLetters::contains)
-                .collect(Collectors.toList());
+                .filter(wordsThatContainSuccessiveLetters::contains)
+                .toList();
+
+        /*List<Entry> common = new ArrayList<>(wordsThatStartWith);
+        common.retainAll(wordsThatContainSuccessiveLetters);*/
+
         return common;
+
     }
 
     public List<Entry> getWordsThatContain(String chars) {
+
         return aggregatorRestClient.getWordsThatContain(chars);
+
     }
 
 }
